--- a/templates/nats-ts/.partials/index/subscribe.njk
+++ b/templates/nats-ts/.partials/index/subscribe.njk
@@ -1,9 +1,9 @@
 
-{% macro subscribe(channelName, message) %}
+{% macro subscribe(channelName, message, channel) %}
   /**
-    *  Wrapper
-    * @param onDataCallback Called when message recieved.
-    */
+  *  {{channel.description()}}
+  * @param onDataCallback Called when message recieved.
+  */
   public subscribeTo{{channelName | pascalCase }}(onDataCallback : (err?: NatsError, msg?: {{ message.uid() | pascalCase }}Message) => void): Promise<Subscription> {
     return {{ channelName | camelCase }}Channel.subscribe(onDataCallback, this.nc);
   }
