#205 Adds baseHref param to index.html

--- a/templates/html/index.html
+++ b/templates/html/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  {% if params.baseHref %}
+   <base href="{{params.baseHref}}"></base>
+  {% endif %}
   <title>{{asyncapi.info().title()}} {{asyncapi.info().version()}} documentation</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="css/tailwind.min.css" rel="stylesheet">
