--- a/templates/html/index.html
+++ b/templates/html/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   {% if params.baseHref %}
-   <base href="{{params.baseHref}}"></base>
+   <base href="{{params.baseHref}}">
   {% endif %}
   <title>{{asyncapi.info().title()}} {{asyncapi.info().version()}} documentation</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
