--- a/templates/html/.partials/type.html
+++ b/templates/html/.partials/type.html
@@ -2,7 +2,7 @@
 {{prop.json('type')}}
 {%- if prop.items() -%}
   &lt;
-  {%- if prop.items().json('type') -%}
+  {%- if prop.items().json and prop.items().json('type') -%}
     {{- prop.items().json('type') -}}
   {% elif prop.items() | isArray -%}
     {%- for p in prop.items() -%}
